--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -21,12 +21,12 @@
         <form action="/login" method="post" id='login_formm'>
         <p class='field'>
           <label for='userName'>USERNAME</label>
-          <input type='text' id='userName' name='userName' title='Username' />
+          <input type='text' id='userName' name='userName' maxlength="15" title='Username' />
           <span id='validaa' class='i i-warning'></span>
         </p>
         <p class='field'>
           <label for='password'>PASSWORD</label>
-          <input type='password' id='password' name='password' title='Password' />
+          <input type='password' id='password' name='password' maxlength="15" title='Password' />
           <span id='valida' class='i i-close'></span>
           <input type='submit' id='do_login' value='GET STARTED' title='Get Started' />
         </p>
@@ -52,11 +52,15 @@
         <div class='fieldset-body'>
           <p class='field'>
             <label for='userName'>USERNAME</label>
-            <input type='text' id='ReguserName' name='userName' title='Username for registration' required />
+            <input type='text' id='ReguserName' name='userName' maxlength="10" title='Username for registration' required onblur="checkUserNameAvailability()" />
+           <span id = "userNameMessage"> </span>
+            <span id='userNameLengthWarning' style="color: red;"></span>
           </p>
           <p class='field'>
             <label for='email'>EMAIL</label>
-            <input type='email' id='email' name='email' title='Email for registration' required />
+            <input type='email' id='email' name='email' maxlength="20" title='Email for registration' required onblur="checkEmailAvailability()" />
+            <span id = "emailMessage"> </span>
+            <span id="userEmailLengthWarning" style="color: red;"></span>
           </p>
           <p class='field'>
             <label for='password'>PASSWORD</label>
@@ -67,10 +71,11 @@
       </form>
   </div>
 </div>
-<div class='icon-credits'>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, <a href="http://www.flaticon.com/authors/budi-tanrim" title="Budi Tanrim">Budi Tanrim</a> & <a href="http://www.flaticon.com/authors/nice-and-serious" title="Nice and Serious">Nice and Serious</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="js/checkUserNameAvailability.js"></script>
+<script src="js/checkEmailAvailability.js"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
-
 <script src="js/index.js"></script>
 
 </body>
