fix verification email

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -65,11 +65,14 @@
     </form>
   </div>
 </div>
-
+<!--<div id="verification-popup" style="display:none;">-->
+<!--  Your email has been verified!-->
+<!--</div>-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script th:src="@{/js/checkUserNameAvailability.js}" src="../static/js/checkUserNameAvailability.js"></script>
 <script th:src="@{/js/checkEmailAvailability.js}" src="../static/js/checkEmailAvailability.js"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
 <script th:src="@{/js/index.js}" src="../static/js/index.js"></script>
+<script th:src="@{/js/emailVerification.js}" src="../static/js/emailVerification.js"></script>
 </body>
 </html>
